--- a/E_Commerce_Back_End/src/main/resources/application.properties
+++ b/E_Commerce_Back_End/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #JPA
 #to '' identifiers for better performence
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.data.jpa.repositories.enabled=true
@@ -17,3 +17,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #file size
 spring.servlet.multipart.maxFileSize=500MB
 spring.servlet.multipart.maxRequestSize=500MB
+
+
