--- a/E-Commerce-Front-End/E-Commerce-App/package.json
+++ b/E-Commerce-Front-End/E-Commerce-App/package.json
@@ -24,16 +24,18 @@
     "@angular/router": "~8.2.11",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "angular-bootstrap-md": "^8.4.0",
-    "bootstrap": "^3.4.1",
-    "chart.js": "^2.8.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^3.3.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.11",
     "ngx-bootstrap": "^5.2.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
