--- a/E_Commerce_Back_End/src/main/resources/application.properties
+++ b/E_Commerce_Back_End/src/main/resources/application.properties
@@ -19,3 +19,14 @@ spring.servlet.multipart.maxFileSize=500MB
 spring.servlet.multipart.maxRequestSize=500MB
 
 
+###### Email Properties ######
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tizaramart@gmail.com
+spring.mail.password=hablumotahar
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
