--- a/E-Commerce-Front-End/E-Commerce-App/package.json
+++ b/E-Commerce-Front-End/E-Commerce-App/package.json
@@ -26,16 +26,19 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/chart.js": "^2.8.9",
     "angular-bootstrap-md": "^8.4.0",
+    "angularfire2": "^5.2.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "core-js": "^3.3.3",
+    "firebase": "^7.2.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-wow": "^2.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "wowjs": "^1.1.3",
     "zone.js": "~0.10.2"
