--- a/E_Commerce_Back_End/pom.xml
+++ b/E_Commerce_Back_End/pom.xml
@@ -64,6 +64,38 @@
 
 	<build>
 		<plugins>
+		
+		
+		
+		<!-- angular start -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/classes/static/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/../E-Commerce-Front-End/E-Commerce-App/dist/E-Commerce-App</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- angular end -->
+		
+		
+		
+		
+		
+		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
