--- a/E-Commerce-Front-End/E-Commerce-App/package.json
+++ b/E-Commerce-Front-End/E-Commerce-App/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-facebook": "^2.4.0",
     "ngx-wow": "^2.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
